# morphing

./: .gitignore  Cargo.toml  rust-toolchain.toml
examples/: Cargo.toml
examples/.cargo/: config.toml
examples/hello_morphing/: Cargo.toml
examples/hello_morphing/src/: lib.rs  main.rs  my_config.toml
examples/src/: lib.rs  main.rs
litconfig/: Cargo.toml
litconfig-macros/: Cargo.toml
litconfig-macros/src/: convert.rs  key.rs  lib.rs  parse.rs
litconfig/src/: lib.rs
morphing/: Cargo.toml  scene_config.toml
morphing-builtins/: Cargo.toml
morphing-builtins/src/: lib.rs
morphing-builtins/src/components/: camera_transform.rs  color.rs  component.rs  mod.rs  motor.rs  paint.rs  transform.rs
morphing-builtins/src/layers/: builtin_planar.rs  mod.rs
morphing-builtins/src/mobjects/: camera.rs  mod.rs  shape.rs  typst.rs
morphing-builtins/src/presentations/: camera_transform.rs  mod.rs  planar_trimesh.rs
morphing-builtins/src/shaders/: builtin_planar.wgsl
morphing-builtins/src/timelines/: rates.rs
morphing-core/: Cargo.toml
morphing-core/src/: alive.rs  animation.rs  config.rs  entity.rs  get.rs  gui.rs  layer.rs  lib.rs  link.rs  mobject.rs  renderable.rs  resource.rs  scene.rs  stage.rs  storable.rs  storage.rs  timeline.rs  timer.rs  traits.rs
morphing-gizmos/: Cargo.toml  typst_config.toml
morphing-gizmos/src/: general_config.toml  lib.rs
morphing-gizmos/src/components/: camera.rs  color.rs  component.rs  mod.rs  paint.rs  path.rs  shader_macros.rs  stroke.rs  transform.rs
morphing-gizmos/src/mobjects/: mod.rs  shape.rs  typst.rs
morphing-gizmos/src/shaders/: planar_triangles.wgsl
morphing-gizmos/src/timelines/: rates.rs
morphing-gui/: Cargo.toml
morphing-gui/src/: app.rs  collection.rs  io.rs  logger.rs  main.rs  message.rs  progress.rs  state.rs  update.rs  view.rs
morphing-macros/: Cargo.toml
morphing-macros/src/: field_index.rs  get_field.rs  lib.rs  link.rs  rate.rs  scene.rs  structure.rs
morphing/src/: lib.rs  main.rs
morphing/src/components/: camera.rs  component.rs  fill.rs  motor.rs  paint.rs  path.rs  stroke.rs  transform.rs
morphing/src/mobjects/: mobject.rs  shape.rs  typst.rs
morphing/src/shaders/: planar_triangles.wgsl
morphing/src/timelines/: act.rs  alive.rs  construct.rs  mod.rs  rates.rs  scene.rs  timeline.rs  update.rs
morphing/src/toplevel/: app.rs  config.rs  constants.rs  io.rs  mod.rs  palette.rs  renderer.rs  scene.rs  settings.rs  world.rs
morphing_macros/: Cargo.toml
morphing_macros/src/: lib.rs
src/: cli.rs  fill.rs  lib.rs  main.rs  path.rs  scene.rs  stroke.rs  typst.rs  world.rs
src/components/: camera.rs  component.rs  fill.rs  interpolate.rs  mod.rs  motor.rs  paint.rs  path.rs  scalar.rs  shape.rs  transform.rs
src/mobjects/: fill.rs  mobject.rs  mod.rs  shape.rs  stroke.rs  typst.rs
src/shaders/: shape.wgsl
src/timelines/: act.rs  alive.rs  construct.rs  mod.rs  rates.rs  timeline.rs  update.rs
src/toplevel/: app.rs  config.rs  mod.rs  palette.rs  renderer.rs  scene.rs  settings.rs  world.rs
