[package]
name = "morphing"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
bezier-rs = "0.4.0"
comemo = "0.4.0"
egui = "0.30.0"
encase = { version = "0.10.0", features = ["nalgebra"] }
env_logger = "0.11.6"
essi-ffmpeg = "0.2.0"
geometric_algebra = "0.3.0"
glam = "0.24.2"
itertools = "0.13.0"
lyon = "1.0.1"
nalgebra = "0.33.2"
palette = "0.7.6"
parking_lot = "0.12.3"
pollster = "0.4.0"
rfd = "0.15.2"
ron = "0.8.1" # to be removed
serde = "1.0.217" # to be removed
ttf-parser = "0.24.1"
typst = "0.12.0"
typst-kit = { version = "0.12.0", features = ["embed-fonts"] }
typst-svg = "0.12.0" # to be removed
wgpu = "23.0.1"
winit = "0.30.8"
