[workspace]
resolver = "2"
members = [
    "morphing",
    "morphing-macros",
    "examples",
    "winit-egui-wgpu-template",
]

# From https://bevyengine.org/learn/quick-start/getting-started/setup/#compile-with-performance-optimizations

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3
