[package]
name = "morphing-core"
version = "0.1.0"
authors = ["YishiMichael"]
edition = "2021"

[dependencies]
inventory = "0.3.17"
morphing-macros = { path = "../morphing-macros" }
nonempty = "0.11.0"
serde = { version = "1.0.217", features = ["rc", "serde_derive"] }
# serde-hashkey = { version = "0.4.5", features = ["ordered-float"] }
serde_traitobject = "0.2.8"
toml = "0.8.20"
typemap_rev = "0.3.0"
wgpu = "0.19.4"
