[package]
name = "morphing-gui"
version = "0.1.0"
authors = ["YishiMichael"]
edition = "2021"

[[bin]]
name = "morphing-gui"

[dependencies]
anyhow = "1.0.95"
essi-ffmpeg = "0.2.0"
futures-core = "0.3.31"
humantime = "2.1.0"
iced = { version = "0.13.1", features = ["advanced"] }
iced_aw = "0.11.0"
morphing-core = { path = "../morphing-core" }
rfd = "0.15.2"
