[package]
name = "morphing-gui"
version = "0.1.0"
authors = ["YishiMichael"]
edition = "2021"

[[bin]]
name = "morphing-gui"

[dependencies]
dashmap = "6.1.0"
essi-ffmpeg = "0.2.0"
futures = "0.3.31"
humantime = "2.1.0"
iced = { version = "0.13.1", features = ["advanced"] }
iced_aw = "0.11.0"
morphing-core = { path = "../morphing-core" }
rfd = "0.15.2"
ron = "0.8.1"
shh = "1.0.1"
