[package]
name = "morphing-gui"
version = "0.0.1"
authors = ["YishiMichael"]
edition = "2024"

[[bin]]
name = "morphing-gui"

[dependencies]
eframe = "0.33.2"
egui = "0.33.2"
egui-wgpu = "0.33.2"
epaint = "0.33.2"
morphing-core = { path = "../morphing-core" }
# dashmap = "6.1.0"
# essi-ffmpeg = "0.2.0"
# futures = "0.3.31"
# humantime = "2.1.0"
# iced = { version = "0.13.1", features = ["advanced"] }
# iced_aw = "0.11.0"
# rfd = "0.15.2"
# ron = "0.8.1"
# shh = "1.0.1"
