[package]
name = "morphing"
version = "0.1.0"
authors = ["YishiMichael"]
edition = "2021"

[dependencies]
bezier-rs = { version = "0.4.0", features = ["serde"] }
comemo = "0.4.0"
dashmap = "6.1.0"
encase = { version = "0.10.0", features = ["nalgebra"] }
geometric_algebra = "0.3.0"
glam = "0.24.2"
iced = "0.13.1"
inventory = "0.3.17"
itertools = "0.13.0"
lazy-regex = "3.4.1"
lyon = { version = "1.0.1", features = ["serialization"] }
morphing-macros = { path = "../morphing-macros" }
nalgebra = { version = "0.33.2", features = ["serde-serialize"] }
palette = { version = "0.7.6", features = ["serializing"] }
paste = "1.0.15"
ron = "0.8.1"
seahash = "4.1.0"
serde = "1.0.217"
serde_traitobject = "0.2.8"
shh = "1.0.1"
strum = { version = "0.27.0", features = ["derive"] }
toml = "0.8.20"
ttf-parser = "0.24.1"
type-map = "0.5.0"
typst = "0.12.0"
typst-kit = { version = "0.12.0", features = ["embed-fonts"] }
typst-svg = "0.12.0" # to be removed
