[package]
name = "hello_morphing"
version = "0.0.1"
edition = "2024"

[dependencies]
encase = "0.12.0"
geometric_algebra = "0.3.0"
litconfig = { path = "../../litconfig" }
# morphing-builtins = { path = "../../morphing-builtins" }
# morphing-core = { path = "../../morphing-core" }
nalgebra = { version = "0.34.1", features = ["encase"] }
